Latest UI Changes

--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "@angular/flex-layout": "^2.0.0-rc.1",
     "@angular/forms": "~2.4.0",
     "@angular/http": "~2.4.0",
-    "@angular/material": "file:///Users/hariprasad/Documents/Angular2/material2/dist/@angular/material",
+    "@angular/material": "file:///Users/hariprasad/Documents/Angular2/angular2material/dist/@angular/material",
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.1",
@@ -188,6 +188,7 @@
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
+    "material2-srcs": "file:///Users/hariprasad/Documents/Angular2/Angular2Material",
     "minimatch": "^3.0.3",
     "ng2-translate": "^5.0.0",
     "reflect-metadata": "^0.1.8",
